third_party/move/move-compiler-v2/tests/op-equal/invalid3.exp

Diagnostics:
error: invalid assignment
  ┌─ tests/plus-equal/invalid3.move:3:9
  │
3 │         1 += 1;
  │         ^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ tests/plus-equal/invalid3.move:11:9
   │
11 │         foo() += 1;
   │         ^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
